evaluationDependsOn(':lib-logging')

apply plugin: 'java'
apply plugin: 'application'

compileJava {
    options.compilerArgs << '-parameters'
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

repositories {
    ivy {
        ivyPattern "https://sissource.ethz.ch/openbis/openbis-public/openbis-ivy/-/raw/BIS-2532-ivy-repository-refactoring-for-open-bis-7/[organisation]/[module]/[revision]/ivy.xml"
        artifactPattern "https://sissource.ethz.ch/openbis/openbis-public/openbis-ivy/-/raw/BIS-2532-ivy-repository-refactoring-for-open-bis-7/[organisation]/[module]/[revision]/[artifact]-[revision](-[classifier]).[ext]"
    }
    //mavenCentral()
}

configurations {
    tests.extendsFrom testImplementation
    tests.canBeResolved true
}

dependencies {
    annotationProcessor libs.org.projectlombok.lombok
    implementation project(':lib-logging'),
            project(':api-openbis-java'),
            libs.org.projectlombok.lombok,
            libs.org.slf4j.slf4j.api,
            libs.org.slf4j.slf4j.jdk14,
            libs.org.apache.sshd.sshd.core,
            libs.org.apache.sshd.sshd.sftp,
            libs.org.apache.sshd.sshd.netty,
            libs.io.netty.netty.all
    testImplementation libs.org.junit.junit,
            libs.org.mockito.mockito.core,
            libs.org.hamcrest.hamcrest.core,
            libs.org.hamcrest.hamcrest.library
}

task openBISDevelopmentEnvironmentAfsSftpStart(type: JavaExec) {
    mainClass = 'ch.ethz.sis.afssftp.startup.Main'
    classpath = sourceSets.main.runtimeClasspath
    args(['../server-sftp/src/main/resources/service.properties'])
    jvmArgs(['--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
             '--add-opens=java.base/java.nio=ALL-UNNAMED',
             '-Dafs.logging.configuration=src/main/resources/logging.properties',
             '-Dio.netty.tryReflectionSetAccessible=true',
             '-Xmx512M', '-ea'])
}

task AFSServerZip(type: Zip, dependsOn: compileJava) {
    archiveBaseName = 'server-sftp'
    from(jar) {
        into('server-sftp/lib/')
    }
    from(configurations.runtimeClasspath) {
        into('server-sftp/lib/')
    }
    from('dist') {
        into 'server-sftp/'
    }
}

tasks.named('distTar') {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
tasks.named('distZip') {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

task testJar(type: Jar, dependsOn: testClasses) {
    archiveBaseName = "test-${project.name}"
    from sourceSets.test.output
}

jar {
    from('src/main') {
        into 'server-sftp'
    }
}

artifacts {
    tests testJar
}

test {
    systemProperty 'java.awt.headless', 'true'
}